--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.11.1",
+    "unplugin-vue-components": "0.19.5",
     "vite": "^2.9.9",
     "vite-plugin-eslint": "^1.6.1",
-    "vue-tsc": "^0.34.7"
+    "vue-tsc": "^0.39.5"
   }
 }
