--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
+    "@element-plus/icons-vue": "^2.0.6",
     "@types/eslint": "^8.4.2",
     "@types/node": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
