--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "src/**/*.{js,vue,ts}": "npm run lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "element-plus": "^2.2.4",
     "vue": "^3.0.11",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.0.15",
+    "vuex": "4.0.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
