--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vuex": "4.0.0"
   },
   "devDependencies": {
+    "nprogress": "^0.2.0",
     "@commitlint/config-conventional": "^17.0.2",
     "@element-plus/icons-vue": "^2.0.6",
     "@types/eslint": "^8.4.2",
