--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "element-plus": "2.2.14",
+    "json-bigint": "^1.0.0",
     "vue": "^3.0.11",
     "vue-router": "^4.0.15",
     "vuex": "4.0.0"
