feat: 新增创建任务、创建任务步骤，字段映射

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -9,5 +9,6 @@
     "bracketSpacing": true,
     "stylelintIntegration": false,
     "eslintIntegration": false,
-    "tslintIntegration": false
+    "tslintIntegration": false,
+    "trailingComma": "none"
 }
