--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-vue": "^9.1.0",
     "husky": "7.0.1",
     "lint-staged": "^13.0.0",
+    "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "nprogress": "^0.2.0",
     "prettier": "2.6.2",
